--- a/auctions/templates/auctions/search.html
+++ b/auctions/templates/auctions/search.html
@@ -1,28 +1,45 @@
-{% extends "auctions/layout.html" %}
-{% load static %}
-
-{% block body %}
+{% extends "auctions/layout.html" %} {% load static %} {% block body %}
 
 <div class="container mt-4">
   <div class="d-flex flex-wrap">
     {% for category in categories %}
-      <div class="card mb-3 mx-2" style="width: 10rem; border-radius: 10px; overflow: hidden; cursor: pointer;" onclick="submitForm('{{ category }}')">
-          <img class="card-img-top" src="{% static 'auctions/' %}{{ category }}.jpg" alt="{{ category }}" style="border-radius: 10px 10px 0 0; height: 150px; object-fit: cover;">
-          <div class="card-body d-flex align-items-center justify-content-center">
-              <h6 class="card-title" style="font-size: 1rem;">{{ category }}</h6>
-          </div>
-          <form class="categoryForm" id="categoryForm_{{ category }}" action="{% url 'results' category=category %}" method="POST" style="display: none;">
-              {% csrf_token %}
-              <input type="hidden" name="category" value="{{ category }}">
-          </form>
+    <div
+      class="card mb-3 mx-2"
+      style="
+        width: 10rem;
+        border-radius: 10px;
+        overflow: hidden;
+        cursor: pointer;
+      "
+      onclick="submitForm('{{ category }}')"
+    >
+      <img
+        class="card-img-top"
+        src="{% static 'auctions/' %}{{ category }}.jpg"
+        alt="{{ category }}"
+        style="border-radius: 10px 10px 0 0; height: 150px; object-fit: cover"
+      />
+      <div class="card-body d-flex align-items-center justify-content-center">
+        <h6 class="card-title" style="font-size: 1rem">{{ category }}</h6>
       </div>
+      <form
+        class="categoryForm"
+        id="categoryForm_{{ category }}"
+        action="{% url 'results' category=category %}"
+        method="POST"
+        style="display: none"
+      >
+        {% csrf_token %}
+        <input type="hidden" name="category" value="{{ category }}" />
+      </form>
+    </div>
     {% endfor %}
   </div>
 </div>
 
 <script>
   function submitForm(category) {
-      document.getElementById('categoryForm_' + category).submit();
+    document.getElementById("categoryForm_" + category).submit();
   }
 </script>
 
